--- a/image-treatment-01.html
+++ b/image-treatment-01.html
@@ -15,5 +15,14 @@
 
   </head>
   <body>
+    <main>
+      <section>
+        <article class="play">
+        <css-doodle use="var(--rule)" class="voting"></css-doodle>
+        <h2>Promise 1</h2>
+		    <p style="font-size: x-large; color: whitesmoke;">More, more, more!</p>
+		    </article>
+      </section>
+    </main>
   </body
 </html>
