--- a/image-treatment-01.html
+++ b/image-treatment-01.html
@@ -18,7 +18,7 @@
     <main>
       <section>
         <article class="play">
-        <css-doodle use="var(--rule)" class="voting"></css-doodle>
+        <css-doodle use="var(--rule)" class="voting doting"></css-doodle>
         <h2>Promise 1</h2>
 		    <p style="font-size: x-large; color: whitesmoke;">More, more, more!</p>
 		    </article>
