--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               id="accordion1id"
               type="button">
         <span class="Accordion-title">
-        <article class="play">
+        <article class="standard play">
         <css-doodle use="var(--rule)" class="voting"></css-doodle>
         <h2>Promise 1</h2>
 		<p style="font-size: x-large; color: whitesmoke;">More, more, more!</p>
@@ -74,7 +74,7 @@
               id="accordion2id"
               type="button">
         <span class="Accordion-title">
-        <article class="play">
+        <article class="standard play">
         <css-doodle use="var(--rule)" class="housing"></css-doodle>
         <h2>Promise 2</h2>
 		<p style="font-size: x-large;">More, more, more!</p>
@@ -119,7 +119,7 @@
               id="accordion3id"
               type="button">
         <span class="Accordion-title">
-        <article class="play">
+        <article class="standard play">
         	<css-doodle use="var(--rule)" class="education"></css-doodle>
         <h2>Promise 3</h2>
 		<p style="font-size: x-large;">More, more, more!</p>
@@ -261,7 +261,7 @@
               id="accordion4id"
               type="button">
         <span class="Accordion-title">
-        <article class="play">
+        <article class="standard play">
         	<css-doodle use="var(--rule)"></css-doodle>
         <h2>Promise 4</h2>
 		<p style="font-size: x-large;">More, more, more!</p>
