--- a/image-treatment-01.html
+++ b/image-treatment-01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Accordion Playtime</title>
+    <title>Image Treatment Playtime</title>
     <link href="accordion.css" media="all" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.1/modernizr.min.js"></script>
 
@@ -16,10 +16,10 @@
   </head>
   <body>
     <main>
+        <h2>Promise 1</h2>
       <section>
         <article class="play">
         <css-doodle use="var(--rule)" class="voting doting"></css-doodle>
-        <h2>Promise 1</h2>
 		    <p style="font-size: x-large; color: whitesmoke;">More, more, more!</p>
 		    </article>
       </section>
